<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/header_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            style="@style/Title"
            />

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:text="@string/text_welcome"
            style="@style/Text"
            />

        <TextView
            android:id="@+id/bread"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            style="@style/Item"
            android:text="@string/item_bread"
            />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            style="@style/Choice">
            <RadioButton
                android:id="@+id/bread_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bread_1"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton
                android:id="@+id/bread_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bread_2"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton
                android:id="@+id/bread_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bread_3"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton
                android:id="@+id/bread_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bread_4"
                android:onClick="onRadioButtonClicked"/>
        </RadioGroup>

        <TextView
            android:id="@+id/meat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            style="@style/Item"
            android:text="@string/item_meat"
            />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            style="@style/Choice">
            <RadioButton
                android:id="@+id/meat_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/meat_1"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton
                android:id="@+id/meat_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/meat_2"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton
                android:id="@+id/meat_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/meat_3"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton
                android:id="@+id/meat_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/meat_4"
                android:onClick="onRadioButtonClicked"/>
        </RadioGroup>

        <TextView
            android:id="@+id/extra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            style="@style/Item"
            android:text="@string/item_extra"
            />
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/extra_1"
            style="@style/Choice"
            android:onClick="onCheckboxClicked"
            />
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/extra_2"
            style="@style/Choice"
            android:onClick="onCheckboxClicked"
            />
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/extra_3"
            style="@style/Choice"
            android:onClick="onCheckboxClicked"
            />
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/extra_4"
            style="@style/Choice"
            android:onClick="onCheckboxClicked"
            />

        <TextView
            android:id="@+id/sauce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            style="@style/Item"
            android:text="@string/item_sauce"
            />
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sauce_1"
            style="@style/Choice"
            android:onClick="onCheckboxClicked"
            />
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sauce_2"
            style="@style/Choice"
            android:onClick="onCheckboxClicked"
            />
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sauce_3"
            style="@style/Choice"
            />
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sauce_4"
            style="@style/Choice"
            android:onClick="onCheckboxClicked"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_end"
            android:layout_gravity="center"
            style="@style/Button"/>

    </LinearLayout>

</ScrollView>